--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
-        classpath "gradle.plugin.nl.javadude.gradle.plugins:license-gradle-plugin:0.13.1"
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
+        classpath 'com.android.tools.build:gradle:3.2.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -23,6 +21,8 @@ buildscript {
 plugins {
     id "com.jfrog.bintray" version "1.6"
     id "com.jfrog.artifactory" version "4.4.0"
+    id "com.github.hierynomus.license" version "0.14.0"
+    id "com.github.dcendents.android-maven" version "2.1"
 }
 
 allprojects {
@@ -41,13 +41,8 @@ allprojects {
     }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
-}
-
 ext {
-    supportVersion = "27.0.2"
-    compileVersion = 27
-    targetVersion = 27
-    buildToolsVersion = "26.0.2"
+    supportVersion = "28.0.0"
+    compileVersion = 28
+    targetVersion = 26
 }
