--- a/zoomage/build.gradle
+++ b/zoomage/build.gradle
@@ -5,7 +5,6 @@ group 'com.jsibbold'
 
 android {
     compileSdkVersion rootProject.ext.compileVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
         minSdkVersion 16
@@ -30,7 +29,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     testImplementation 'junit:junit:4.12'
-    implementation "com.android.support:appcompat-v7:$rootProject.ext.supportVersion"
+    implementation 'androidx.appcompat:appcompat:1.0.2'
 }
 
 ext {
